Bug 456065 - the second icon in status bar is not correct
Summary: the second icon in status bar is not correct
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.6
Platform: Android Android 11.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-28 08:27 UTC by Baoyi
Modified: 2022-06-28 08:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Baoyi 2022-06-28 08:27:51 UTC
STEPS TO REPRODUCE
1. open krita on android tablet
2. view the status bar at the bottom

OBSERVED RESULT
click on the second icon in the status bar
it behaviors like a button to toggle full screen mode
but it shows with a zoom horizontal like icon

EXPECTED RESULT
show same icon as the 'Fullscreen' button in the tool bar
or just remove it, as we can add the 'Fullscreen' button on tool bar
Comment 1 Halla Rempt 2022-06-28 08:32:54 UTC
Git commit 3b915ffa3ec481f1bc5a5863e9dc9af888f4eb08 by Halla Rempt.
Committed on 28/06/2022 at 08:32.
Pushed by rempt into branch 'master'.

Use the full-screen icon in the statusbar

M  +1    -1    libs/ui/kis_statusbar.cc

https://invent.kde.org/graphics/krita/commit/3b915ffa3ec481f1bc5a5863e9dc9af888f4eb08
Comment 2 Halla Rempt 2022-06-28 08:33:05 UTC
Git commit 7732fa55690cec6a7ac3ee18aa417fcdf3e0a01b by Halla Rempt.
Committed on 28/06/2022 at 08:32.
Pushed by rempt into branch 'krita/5.1'.

Use the full-screen icon in the statusbar
(cherry picked from commit 3b915ffa3ec481f1bc5a5863e9dc9af888f4eb08)

M  +1    -1    libs/ui/kis_statusbar.cc

https://invent.kde.org/graphics/krita/commit/7732fa55690cec6a7ac3ee18aa417fcdf3e0a01b