Use the full-screen icon in the statusbar

BUG:456065